<resources>
    <string name="app_name">Green Doctor</string>
    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
</resources>
